--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,14 +11,12 @@ if(NOT Boost_FOUND)
   return()
 endif(NOT Boost_FOUND)
 
-# test_start_stop_connect
-
-add_executable(test_start_stop_connect
-  test_start_stop_connect.cpp
-  test_common.c
+add_executable(test_callbacks
+  test_callbacks.cpp
+  test_server_implem.c
 )
 
-target_link_libraries(test_start_stop_connect
+target_link_libraries(test_callbacks
   PUBLIC
     Boost::boost
     Boost::filesystem
@@ -30,52 +28,6 @@ target_link_libraries(test_start_stop_connect
     pthread
 )
 
-target_compile_definitions(test_start_stop_connect PRIVATE "BOOST_TEST_DYN_LINK")
+target_compile_definitions(test_callbacks PRIVATE "BOOST_TEST_DYN_LINK")
 
-add_test(rvnvmicomm::start_stop_connect test_start_stop_connect)
-
-# test_read_memory
-
-add_executable(test_read_memory
-  test_read_memory.cpp
-  test_common.c
-)
-
-target_link_libraries(test_read_memory
-  PUBLIC
-    Boost::boost
-    Boost::filesystem
-
-  PRIVATE
-    rvnvmicomm_client
-    rvnvmicomm_server
-    Boost::unit_test_framework
-    pthread
-)
-
-target_compile_definitions(test_read_memory PRIVATE "BOOST_TEST_DYN_LINK")
-
-add_test(rvnvmicomm::test_read_memory test_read_memory)
-
-# test_read_register
-
-add_executable(test_read_register
-  test_read_register.cpp
-  test_common.c
-)
-
-target_link_libraries(test_read_register
-  PUBLIC
-    Boost::boost
-    Boost::filesystem
-
-  PRIVATE
-    rvnvmicomm_client
-    rvnvmicomm_server
-    Boost::unit_test_framework
-    pthread
-)
-
-target_compile_definitions(test_read_register PRIVATE "BOOST_TEST_DYN_LINK")
-
-add_test(rvnvmicomm::test_read_register test_read_register)
+add_test(rvnvmicomm::start_stop_connect test_callbacks)
