--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ build:gcc:
     extends: .build
 
     before_script:
-        - apt-get update && apt-get install -y cmake g++ libboost-test-dev
+        - apt-get update && apt-get install -y cmake g++ libboost-test-dev libboost-filesystem-dev
 
     variables:
         CMAKE_C_COMPILER: gcc
@@ -34,7 +34,7 @@ build:clang:
     extends: .build
 
     before_script:
-        - apt-get update && apt-get install -y cmake clang libboost-test-dev
+        - apt-get update && apt-get install -y cmake clang libboost-test-dev libboost-filesystem-dev
 
     variables:
         CMAKE_C_COMPILER: clang
@@ -46,7 +46,7 @@ build:clang:
     stage: test
 
     before_script:
-        - apt-get update && apt-get install -y cmake libboost-test-dev
+        - apt-get update && apt-get install -y cmake libboost-test-dev libboost-filesystem-dev
 
     script:
         - cd build/
