CI: use default branch for pages instead of master

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -107,5 +107,5 @@ pages:
             - public
         expire_in: 30 days
 
-    only:
-        - master
+    rules:
+      - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
